  * If the number is too long to display it now is still possible to copy it.
  * Documented that box() highlights text in maxima's output.
  * the with_slider type of commands now uses wxstatusbar() in order to provide
  * progress information for the user.
  * Several scrolling fixes, again.
  * Two concurrent wxMaxima instances now no more overwrite each other's "Recent files"
    list.
  * Invalid XML tags are now handled more gracefully
  * Deduplicated the code for saving .wxm files
  * content.xml files that have been extracted from a broken .wxmx file (e.G.
    using a text editor as UTF8-encoded TeXt without BOM can now be loaded by
    wxMaxima in order to reconstruct the worksheet.
  * MacOs: Upgrading from a previous version should no more cause crashes due to
    font issues.
  * MathJaX export can now be configured to instruct the html export to download
    MathJaX from a different URL: They moved the URL one can use and might do so
    again somewhere in the future.
  * Maximum number of digits and if we use user-defined labels now are no more
    hardcoded into the worksheet at evaluation time.
  * cmake is now our main build system: It is supported under MSVC, XCode,
    Code::Blocks, its output looks much nicer than the one from the autotools
    and setting it up uses much more straightforward constructs.
    The recipe to build a debian package using cmake can be found at
    https://code.launchpad.net/~peterpall/wxmaxima/packaging
  * Massive speed-ups
  * File/Open can now import .mac and .out files from Xmaxima
  * Many additional bug fixes and stability enhancements.

16.12:
  * Not a change in wxMaxima, but useful: In maxima >5.38 the load() command can
    load .wxm files like it would load .mac files.
  * Better detection and diagnosis for maxima process that terminate unexpectedly
    even if the OS fails to notify us that the network connection with
    maxima has dropped.
  * Incremental search
  * Automatic line wrap