@@ -29,6 +29,7 @@
   everything surrounding it in wxMaximaFrame.
  */
 
+#include <wx/notifmsg.h>
 #include "wxMaxima.h"
 #include "SubstituteWiz.h"
 #include "IntegrateWiz.h"
@@ -122,6 +123,9 @@ wxMaxima::wxMaxima(wxWindow *parent, int id, const wxString title,
                    const wxPoint pos, const wxSize size) :
         wxMaximaFrame(parent, id, title, pos, size)
 {
+  m_notificationMessage.SetParent(this);
+  m_notificationMessageActive = false;
+  m_isActive = true;
   m_outputPromptRegEx.Compile(wxT("<lbl>.*</lbl>"));
   wxConfig *config = (wxConfig *) wxConfig::Get();
   m_unsuccessfullConnectionAttempts = 0;
@@ -1202,16 +1206,7 @@ void wxMaxima::ReadMiscText(wxString &data)
     {
       ConsoleAppend(textline, MC_TYPE_ERROR);
 
-      bool abortOnError = false;
-      wxConfig::Get()->Read(wxT("abortOnError"), &abortOnError);
-      if (abortOnError || m_batchmode)
-        m_console->m_evaluationQueue.Clear();
-      {
-        SetBatchMode(false);
-        // Inform the user that the evaluation queue is empty.
-        EvaluationQueueLength(0);
-        m_console->ScrollToError();
-      }
+      AbortOnError();
     }
     else
       ConsoleAppend(textline, MC_TYPE_DEFAULT);
@@ -1432,6 +1427,15 @@ void wxMaxima::ReadPrompt(wxString &data)
     // If the user answers a question additional output might be required even
     // if the question has been preceded by many lines.
     m_outputCellsFromCurrentCommand = 0;
+    if(!m_isActive)
+    {
+      m_notificationMessage.SetTitle(_("Maxima Question"));
+      m_notificationMessage.SetMessage(_("Maxima asks a question!"));
+      m_notificationMessage.SetFlags(wxICON_INFORMATION);
+      if(!m_notificationMessageActive)
+        m_notificationMessage.Show();
+      m_notificationMessageActive = true;
+    }
     if (!o.IsEmpty())
     {
       if (o.Find(wxT("<mth>")) > -1)
@@ -2267,16 +2271,7 @@ void wxMaxima::ReadLispError(wxString &data)
 
     data = wxEmptyString;
 
-    bool abortOnError = false;
-    wxConfig::Get()->Read(wxT("abortOnError"), &abortOnError);
-    if (abortOnError || m_batchmode)
-      m_console->m_evaluationQueue.Clear();
-    {
-      SetBatchMode(false);
-      // Inform the user that the evaluation queue is empty.
-      EvaluationQueueLength(0);
-      m_console->ScrollToError();
-    }
+    AbortOnError();
   }
 }
 
@@ -3210,21 +3205,45 @@ void wxMaxima::ReadStdErr()
 
     DoRawConsoleAppend(o, MC_TYPE_ERROR);
 
-    // If maxima did output something it defintively has stopped.
-    // The question is now if we want to try to send it something new to evaluate.
-    bool abortOnError = false;
-    wxConfig::Get()->Read(wxT("abortOnError"), &abortOnError);
-    SetBatchMode(false);
-    if (abortOnError || m_batchmode)
-    {
-      m_console->m_evaluationQueue.Clear();
-      // Inform the user that the evaluation queue is empty.
-      EvaluationQueueLength(0);
-      m_console->ScrollToError();
-    }
-    else
+    if(!AbortOnError())
       TryEvaluateNextInQueue();
   }
+}
+
+bool wxMaxima::AbortOnError()
+{
+  // If maxima did output something it defintively has stopped.
+  // The question is now if we want to try to send it something new to evaluate.
+  bool abortOnError = false;
+  wxConfig::Get()->Read(wxT("abortOnError"), &abortOnError);
+  SetBatchMode(false);
+
+  if((!m_isActive) &&(!m_notificationMessageActive))
+  {
+    m_notificationMessage.SetTitle(_("Maxima Error"));
+    m_notificationMessage.SetMessage(_("Maxima has issued an error!"));
+    m_notificationMessage.SetFlags(wxICON_ERROR);
+    m_notificationMessage.Show();
+    m_notificationMessageActive = true;
+  }
+  
+  #if wxUSE_NOTIFICATION_MESSAGE
+  // if(m_notificationMessage)
+  //   m_notificationMessage -> Connect(wxEVT_NOTIFICATION_MESSAGE_DISMISSED,
+  //                                    wxCommandEventHandler(wxMaximaFrame::OnNotificationClose),
+  //                                    NULL, this);
+  #endif
+  
+  if (abortOnError || m_batchmode)
+  {
+    m_console->m_evaluationQueue.Clear();
+    // Inform the user that the evaluation queue is empty.
+    EvaluationQueueLength(0);
+    m_console->ScrollToError();
+    return true;
+  }
+  else
+    return false;
 }
 
 void wxMaxima::OnTimerEvent(wxTimerEvent &event)
@@ -6250,19 +6269,7 @@ void wxMaxima::TryEvaluateNextInQueue()
 
       m_console->SetWorkingGroup(NULL);
       m_console->RequestRedraw();
-      bool abortOnError = false;
-      wxConfig::Get()->Read(wxT("abortOnError"), &abortOnError);
-      SetBatchMode(false);
-      // Inform the user that the evaluation queue is empty.
-      EvaluationQueueLength(0);
-      if (abortOnError || m_batchmode)
-      {
-        m_console->m_evaluationQueue.Clear();
-        StatusMaximaBusy(waiting);
-        m_console->SetHCaret(tmp);
-        m_console->ScrollToCaret();
-      }
-      else
+      if(!AbortOnError())
       {
         m_console->m_evaluationQueue.RemoveFirst();
         m_outputCellsFromCurrentCommand = 0;
@@ -6686,6 +6693,14 @@ int wxMaxima::SaveDocumentP()
   return dialog.ShowModal();
 }
 
+void wxMaxima::OnActivate(wxActivateEvent &event)
+{
+  m_isActive = event.GetActive();
+  if(m_notificationMessageActive)
+    m_notificationMessage.Close();
+  m_notificationMessageActive = false;
+}
+
 BEGIN_EVENT_TABLE(wxMaxima, wxFrame)
 
 #if defined __WXMAC__
@@ -7026,7 +7041,7 @@ EVT_UPDATE_UI(menu_show_toolbar, wxMaxima::UpdateMenus)
                 EVT_FIND_REPLACE(wxID_ANY, wxMaxima::OnReplace)
                 EVT_FIND_REPLACE_ALL(wxID_ANY, wxMaxima::OnReplaceAll)
                 EVT_FIND_CLOSE(wxID_ANY, wxMaxima::OnFindClose)
-
+                EVT_ACTIVATE(wxMaxima::OnActivate)
 END_EVENT_TABLE()
 
 /* Local Variables:       */
